[project]
name = "matjip-agent"
version = "0.1.0"
description = "맛집 파인더 — Maps Agentic UI Toolkit A2A agent (Gemini)"
requires-python = ">=3.12"
# 버전 정책: google-adk가 전이 의존성(litellm, jsonschema 등)을 좁게 고정하므로
# 여기서는 하한만 두고, 실제 버전은 uv가 최신 우선으로 해석한다 (uv.lock 참조).
dependencies = [
    "maui-a2ui-python",
    "google-adk[a2a,extensions]>=2.3.0",
    # a2a-sdk 1.0부터 a2a.types.DataPart/TextPart가 제거되는 브레이킹 체인지 —
    # vendor의 maui-a2ui-python과 google-adk 2.3.0 모두 0.3.x API를 사용
    "a2a-sdk[http-server]>=0.3.4,<0.4",
    "google-genai>=2.0.0",
    "jsonschema>=4.0.0",
    "litellm>=1.83.7",
    "python-dotenv>=1.0.0",
    "click>=8.0.0",
    "uvicorn>=0.30.0",
    "mcp>=1.28.1",
]

[tool.hatch.build.targets.wheel]
packages = ["."]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
maui-a2ui-python = { path = "../vendor/a2ui/agent/python-agent", editable = true }
